[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketing-analytics-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — marketing-analytics-ai-mcp MCP Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "ai", "meok", "model-context-protocol"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/marketing-analytics-ai-mcp"
